--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "Set brightness to 0, when device is turned off",
+    "briWhenOffInfo": "This options sets the <pre>brightness</pre> / <pre>level</pre> to 0, when the device is turned off (<pre>on</pre> auf <pre>false</pre>).",
     "buttonDismiss": "Dismiss",
     "buttonNotAgain": "Don't show again",
     "button_closeModal": "Cancel",
@@ -7,6 +9,8 @@
     "connectionTitle": "Connection settings for Hue Bridge",
     "donateInformation": "Feel free to suggest new features via Github or ioBroker forum. If you like this adapter, you very welcome to donate.",
     "donateTitle": "Support the development of the hue-extended Adapter!",
+    "garbageCollector": "Delete outdated devices from objects",
+    "garbageCollectorInfo": "The Garbage Collector deletes outdated devices from the object tree which have not been updated within 24 hours.",
     "getUserInfo": "Press the button on your Hue Bridge first! Afterwards, press the button -Get new user-.",
     "hueToXY": "Use <pre>XY</pre> instead of <pre>hue</pre> (only for non-Philips devices)",
     "hueToXYInfo": "When setting the <pre>hue</pre> state, non-Philips devices may fail to process this even though the command has successfully been applied. With this option, the adapter will always send the <pre>hue</pre> state as <pre>XY</pre> command to non-Philips devices.",
@@ -21,12 +25,17 @@
     "nameIdInfo": "The device ID is necessary within the object tree to uniquely identify a device (in case names are redundand). This option defines whether to put the ID before or after the device name.",
     "nameIdPrepend": "Prepend ID to Device Name",
     "nameInfo": "Use Device Name in Object tree (instead of ID)",
+    "onlyForDuplicates": "Use the device ID only for unambiguousness in case devices are having the same name",
     "other": "Other Settings",
     "port": "Bridge Port",
     "queue": "Queue processing (in seconds)",
     "queueInfo": "Time for processing commands in the queue (in seconds). Commands are queued and processed together. This allows to apply several commands at once (and not one-by-one) on your devices.",
     "refresh": "Refresh (in seconds)",
     "refreshInfo": "Time for refreshing all settings / information (in seconds). If set to 0, settings will only be refreshed on startup.",
+    "sceneInfo": "With this option you may choose how objects for scenes are named within the object tree.",
+    "sceneNamingRoom": "Format <pre>scenes.<b>&lt;Name-of-Group&gt;</b>.<b>&lt;Name-of-Scene&gt;</b>.name</pre>",
+    "sceneNamingScene": "Format <pre>scenes.<b>&lt;Name-of-Scene&gt;</b>.<b>&lt;Name-of-Group&gt;</b>.name</pre>",
+    "sync": "Synchronisation Settings",
     "syncConfig": "Synchronize Config",
     "syncGroups": "Synchronize Groups",
     "syncInfo": "Select items to be synchronized",
