--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "Configurar el brillo a 0, cuando el dispositivo está apagado",
+    "briWhenOffInfo": "Esta opción establece el <pre>brillo</pre> / <pre>nivel</pre> a 0, cuando el dispositivo está apagado (<pre>en</pre> auf <pre>false</pre>).",
     "buttonDismiss": "Descartar",
     "buttonNotAgain": "No volver a mostrar",
     "button_closeModal": "Cancelar",
@@ -7,6 +9,8 @@
     "connectionTitle": "Ajustes de conexión para el Puente Hue",
     "donateInformation": "Siéntase libre de sugerir nuevas características a través de Github o ioBroker foro. Si te gusta este adaptador, usted muy bienvenido a donar.",
     "donateTitle": "Apoyar el desarrollo de los hue-extendida Adaptador!",
+    "garbageCollector": "Eliminar dispositivos obsoletos de objetos",
+    "garbageCollectorInfo": "El Recolector de Basura elimina dispositivos obsoletos desde el árbol de objetos que no han sido actualizados en un plazo de 24 horas.",
     "getUserInfo": "Pulse el botón en su Tono Puente de primero! Después, presione el botón -Obtener nueva por el usuario.",
     "hueToXY": "Uso XY en lugar de tono (sólo por la falta de dispositivos Philips)",
     "hueToXYInfo": "Cuando ajuste el matiz de estado, no de Philips dispositivos pueden fallar para este proceso a pesar de que el comando se ha aplicado con éxito. Con esta opción, el adaptador de enviar siempre el matiz estado como xy comando para no dispositivos Philips.",
@@ -21,12 +25,17 @@
     "nameIdInfo": "El ID de dispositivo es necesaria en el árbol de objetos para identificar un dispositivo (en caso de que los nombres son redundand). Esta opción define si se debe colocar el ID antes o después del nombre del dispositivo.",
     "nameIdPrepend": "Anteponer ID a Nombre de Dispositivo",
     "nameInfo": "El uso de un Nombre de Dispositivo en el árbol de Objetos (en lugar de ID)",
+    "onlyForDuplicates": "Utilizar el IDENTIFICADOR de dispositivo único para unambiguousness en caso de que los dispositivos tienen el mismo nombre",
     "other": "Otros Ajustes",
     "port": "Puente Del Puerto",
     "queue": "La cola de procesamiento (en segundos)",
     "queueInfo": "Tiempo para el procesamiento de los comandos en la cola. Los comandos están en la cola y se procesan de forma conjunta. Esto permite aplicar la fuerza serval comandos a la vez (y no uno por uno) en sus dispositivos.",
     "refresh": "Actualización (en segundos)",
     "refreshInfo": "Tiempo para la actualización de todos los ajustes / información (en segundos). Si se establece en 0, la configuración sólo se actualiza en el inicio.",
+    "sceneInfo": "Con esta opción usted puede elegir la forma de los objetos para las escenas son nombrados en el árbol de objetos.",
+    "sceneNamingRoom": "Formato <pre>las escenas.<b>&lt;Nombre-de-Grupo&gt;</b>.<b>&lt;Nombre de la Escena&gt;</b>.nombre</pre>",
+    "sceneNamingScene": "Formato <pre>las escenas.<b>&lt;Nombre de la Escena&gt;</b>.<b>&lt;Nombre-de-Grupo&gt;</b>.nombre</pre>",
+    "sync": "Ajustes De Sincronización",
     "syncConfig": "Sincronizar Config",
     "syncGroups": "Sincronizar Grupos",
     "syncInfo": "Seleccione los elementos para ser sincronizado",
