--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "Régler la luminosité à 0, lorsque l'appareil est éteint",
+    "briWhenOffInfo": "Cette option définit le <pre>luminosité</pre> / <pre>niveau</pre> 0, lorsque l'appareil est éteint (<pre>le</pre> auf <pre>false</pre>).",
     "buttonDismiss": "Rejeter",
     "buttonNotAgain": "Ne pas afficher de nouveau",
     "button_closeModal": "Annuler",
@@ -7,6 +9,8 @@
     "connectionTitle": "Paramètres de connexion pour la Teinte Pont",
     "donateInformation": "N'hésitez pas à suggérer de nouvelles fonctionnalités via Github ou ioBroker forum. Si vous aimez cet adaptateur, vous les bienvenus pour faire un don.",
     "donateTitle": "Soutenir le développement de la teinte-extension de Carte!",
+    "garbageCollector": "Supprimer obsolète appareils à partir d'objets",
+    "garbageCollectorInfo": "Le Garbage Collector supprime les anciennes périphériques de l'arborescence des objets qui n'ont pas été mis à jour dans les 24 heures.",
     "getUserInfo": "Appuyez sur le bouton de votre Teinte Pont la première! Ensuite, appuyez sur le bouton Obtenir de nouvelles de l'utilisateur.",
     "hueToXY": "Utilisez XY au lieu de la teinte (uniquement pour les non-appareils Philips)",
     "hueToXYInfo": "Lors du réglage de la teinte de l'état, non-Philips appareils risquent de ne pas traiter ce même si la commande a été appliquée avec succès. Avec cette option, la carte envoie toujours la teinte de l'état comme xy commande pour les non-appareils Philips.",
@@ -21,12 +25,17 @@
     "nameIdInfo": "L'ID de l'appareil est nécessaire au sein de l'arborescence de l'objet à identifier de manière unique un périphérique (dans le cas où les noms sont redundand). Cette option définit s'il faut mettre l'ID de l'avant ou après le nom de l'appareil.",
     "nameIdPrepend": "Ajouter l'ID de Périphérique Nom",
     "nameInfo": "Utilisation Nom de l'Appareil dans l'arborescence des Objets (au lieu de l'ID)",
+    "onlyForDuplicates": "Utiliser l'ID de l'appareil uniquement pour unambiguousness dans le cas où les appareils ont le même nom",
     "other": "D'Autres Paramètres",
     "port": "Port De Pont",
     "queue": "File d'attente de traitement (en secondes)",
     "queueInfo": "Le temps de traitement des commandes dans la file d'attente. Les commandes sont en attente et traitées ensemble. Cela permet d'appliquer serval commandes à la fois (et non pas un par un) sur vos appareils.",
     "refresh": "D'actualisation (en secondes)",
     "refreshInfo": "Temps à l'actualisation de tous les paramètres / l'information (en secondes). Si la valeur est 0, les paramètres ne seront actualisées lors du démarrage.",
+    "sceneInfo": "Avec cette option, vous pouvez choisir la manière dont les objets pour les scènes sont nommés au sein de l'arborescence de l'objet.",
+    "sceneNamingRoom": "Format <pre>les scènes.<b>&lt;Nom-du-Groupe&gt;</b>.<b>&lt;Nom de Scène&gt;</b>.nom</pre>",
+    "sceneNamingScene": "Format <pre>les scènes.<b>&lt;Nom de Scène&gt;</b>.<b>&lt;Nom-du-Groupe&gt;</b>.nom</pre>",
+    "sync": "Paramètres De Synchronisation",
     "syncConfig": "Synchroniser Config",
     "syncGroups": "Synchroniser Les Groupes",
     "syncInfo": "Sélectionnez les éléments à synchroniser",
