--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "Impostare la luminosità a 0, quando il dispositivo è spento",
+    "briWhenOffInfo": "Questa opzione imposta il tag <pre>luminosità</pre> / <pre>livello</pre> 0, quando il dispositivo è spento (<pre>su</pre> auf <pre>false</pre>).",
     "buttonDismiss": "Chiudere",
     "buttonNotAgain": "Non mostrare più",
     "button_closeModal": "Annulla",
@@ -7,6 +9,8 @@
     "connectionTitle": "Impostazioni di connessione per Tonalità Ponte",
     "donateInformation": "Sentitevi liberi di suggerire nuove funzionalità tramite Github o ioBroker forum. Se ti piace questo adattatore, è molto benvenuto a donare.",
     "donateTitle": "Sostenere lo sviluppo della tonalità esteso Adattatore!",
+    "garbageCollector": "Elimina i dispositivi da oggetti",
+    "garbageCollectorInfo": "Il Garbage Collector elimina obsoleto dispositivi dalla struttura ad albero di oggetti che non sono stati aggiornati entro 24 ore.",
     "getUserInfo": "Premere il pulsante sulla Tonalità del Ponte di prima! Successivamente, premere il pulsante di Ottenere un nuovo utente.",
     "hueToXY": "XY invece di tonalità (solo per i non-dispositivi Philips)",
     "hueToXYInfo": "Quando si imposta la tonalità di stato, camere non-dispositivi Philips potrebbe non riuscire a processo anche se il comando è stato applicato con successo. Con questa opzione, la scheda di inviare sempre la tonalità di stato xy comando non-dispositivi Philips.",
@@ -21,12 +25,17 @@
     "nameIdInfo": "L'ID del dispositivo è necessario all'interno della struttura ad albero di oggetti per identificare univocamente un dispositivo (nel caso in cui i nomi sono redundand). Questa opzione definisce se mettere l'ID prima o dopo il nome del dispositivo.",
     "nameIdPrepend": "Anteporre ID, Nome del Dispositivo",
     "nameInfo": "Utilizzare il Nome del Dispositivo in Oggetto albero (invece di ID)",
+    "onlyForDuplicates": "Utilizzare il dispositivo solo ID per univocità nel caso di dispositivi con lo stesso nome",
     "other": "Altre Impostazioni",
     "port": "Ponte Di Porta",
     "queue": "La coda di elaborazione (in secondi)",
     "queueInfo": "Il tempo per l'elaborazione dei comandi in coda. I comandi sono in coda e trattati insieme. Questo permette di applicare serval comandi in una sola volta (e non uno) sui vostri dispositivi.",
     "refresh": "Aggiornamento (in secondi)",
     "refreshInfo": "Tempo per l'aggiornamento di tutte le impostazioni / informazioni (in secondi). Se impostato a 0, le impostazioni vengono solo aggiornati all'avvio.",
+    "sceneInfo": "Con questa opzione si può scegliere come oggetti per scene sono indicati all'interno dell'albero di oggetti.",
+    "sceneNamingRoom": "Formato <pre>le scene.<b>&lt;Nome del Gruppo&gt;</b>.<b>&lt;Nome-di-Scena&gt;</b>.nome</pre>",
+    "sceneNamingScene": "Formato <pre>le scene.<b>&lt;Nome-di-Scena&gt;</b>.<b>&lt;Nome del Gruppo&gt;</b>.nome</pre>",
+    "sync": "Impostazioni Di Sincronizzazione",
     "syncConfig": "Sincronizzare Config",
     "syncGroups": "Sincronizzare I Gruppi",
     "syncInfo": "Selezionare gli elementi per essere sincronizzati",
