--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "De helderheid instellen op 0 in, wanneer het apparaat is uitgeschakeld",
+    "briWhenOffInfo": "Deze opties stelt u de <pre>helderheid</pre> / <pre>niveau</pre> 0 is, wanneer het apparaat is uitgeschakeld (<pre>on</pre> auf <pre>false</pre>).",
     "buttonDismiss": "Sluiten",
     "buttonNotAgain": "Don ' t show again",
     "button_closeModal": "Annuleren",
@@ -7,6 +9,8 @@
     "connectionTitle": "Verbindingsinstellingen voor Hue Bridge",
     "donateInformation": "Voel je vrij om te suggereren nieuwe functies via Github of ioBroker forum. Als je van deze adapter, die je erg welkom om te doneren.",
     "donateTitle": "Ondersteuning van de ontwikkeling van de hue-extended Adapter!",
+    "garbageCollector": "Verwijderen van verouderde apparaten van objecten",
+    "garbageCollectorInfo": "De Garbage Collector verwijdert verouderde apparaten uit het objectscherm die niet zijn aangepast binnen 24 uur.",
     "getUserInfo": "Druk op de knop op uw Hue Bridge eerste! Druk vervolgens op de knop nieuwe gebruiker.",
     "hueToXY": "Gebruik XY in plaats van tint (alleen voor niet-Philips-apparaten)",
     "hueToXYInfo": "Bij het instellen van de tint van state, niet-Philips-apparaten kunnen niet verwerkt, hoewel de opdracht met succes is toegepast. Met deze optie worden de adapter zal altijd stuur de tint staat als xy opdracht om niet-Philips-apparaten.",
@@ -21,12 +25,17 @@
     "nameIdInfo": "De apparaat-ID die nodig zijn binnen het object boom ter identificatie van een apparaat (in het geval namen zijn redundand). Met deze optie definieert u of u de ID voor of na de naam van het apparaat.",
     "nameIdPrepend": "Voeg ID naar de Naam van het Apparaat",
     "nameInfo": "Gebruik de Naam van het Apparaat in het objectscherm (in plaats van ID)",
+    "onlyForDuplicates": "Gebruik de apparaat-ID alleen voor unambiguousness in geval apparaten met dezelfde naam",
     "other": "Andere Instellingen",
     "port": "Brug-Poort",
     "queue": "Rij te verwerken (in seconden)",
     "queueInfo": "Tijd voor de verwerking van opdrachten in de wachtrij. Opdrachten in een wachtrij worden geplaatst en verwerkt samen. Dit kunt toepassen serval commando ' s in een keer (en niet één-op-één) toe aan uw apparatuur.",
     "refresh": "Vernieuwen (in seconden)",
     "refreshInfo": "Tijd voor het vernieuwen van alle instellingen / informatie (in seconden). Indien ingesteld op 0, instellingen zal alleen worden vernieuwd bij het opstarten.",
+    "sceneInfo": "Met deze optie kunt u kiezen hoe objecten scènes zijn genoemd in het objectscherm.",
+    "sceneNamingRoom": "Indeling <pre>scènes.<b>&lt;Naam van de Groep&gt;</b>.<b>&lt;Naam-van-Scene&gt;</b>.naam</pre>",
+    "sceneNamingScene": "Indeling <pre>scènes.<b>&lt;Naam-van-Scene&gt;</b>.<b>&lt;Naam van de Groep&gt;</b>.naam</pre>",
+    "sync": "Synchronisatie-Instellingen",
     "syncConfig": "Synchroniseren Config",
     "syncGroups": "Groepen Synchroniseren",
     "syncInfo": "Selecteer de items die moeten worden gesynchroniseerd",
