--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "Ustawić jasność na 0, gdy urządzenie jest wyłączone",
+    "briWhenOffInfo": "Ta opcja ustawia znacznik <pre>jasność i</pre> / <do>poziom</Pre> to do 0, gdy urządzenie jest wyłączone (znaczniki<Pre>na</pre> Auf <Pre>to kłamstwo i</pre>).",
     "buttonDismiss": "Zwolnić",
     "buttonNotAgain": "Nie pokazuj więcej ",
     "button_closeModal": "Anuluj",
@@ -7,6 +9,8 @@
     "connectionTitle": "Ustawienia połączenia Hue bridge",
     "donateInformation": "Nie wahaj się zaproponować nowe funkcje poprzez GitHub lub forum ioBroker. Jeśli podoba ci się ten zasilacz, możesz podarować.",
     "donateTitle": "Wsparcie rozwoju Hue-zaawansowany zasilacz!",
+    "garbageCollector": "Usunięcie przestarzałych urządzeń od obiektów",
+    "garbageCollectorInfo": "Garbage collector usuwa przestarzałe urządzenia z drzewa obiektów, które nie zostały zaktualizowane w ciągu 24 godzin.",
     "getUserInfo": "Naciśnij przycisk na swoim Hue bridge pierwszy! Po tym, klikając na przycisk-dostaniesz nowy użytkownik.",
     "hueToXY": "Używamy XY zamiast Hue (tylko dla urządzeń Philips)",
     "hueToXYInfo": "Przy ustalaniu stanu odcień, nie Philips urządzenia mogą nie proces ten, choć zespół z powodzeniem stosuje. Dzięki tej opcji, zasilacz zawsze wyślemy państwowej odcień jak zespół XY, aby nie Philips urządzenia.",
@@ -21,12 +25,17 @@
     "nameIdInfo": "Identyfikator urządzenia należy w drzewie obiektów w celu jednoznacznej identyfikacji urządzenia (w przypadku, gdy nazwy redundand). Ten parametr określa, czy należy umieścić kod przed lub po nazwie urządzenia.",
     "nameIdPrepend": "Dodaj ID do nazwy urządzenia ",
     "nameInfo": "Używać nazwy urządzenia w drzewie obiektów (a nie ID)",
+    "onlyForDuplicates": "Używamy identyfikator urządzenia tylko dla jednoznaczności w przypadku urządzenia o tej samej nazwie",
     "other": "Inne Opcje",
     "port": "Most Port",
     "queue": "Przetwarzanie kolejki (w sekundach)",
     "queueInfo": "Czas na przetwarzanie poleceń w kolejce. Polecenia są umieszczane w kolejce i przetwarzane razem. To pozwala na stosowanie polecenia сервал raz (a nie jeden) na swoich urządzeniach.",
     "refresh": "Aktualizacje (w sekundach)",
     "refreshInfo": "Podczas aktualizacji wszystkie ustawienia / informacje (w sekundach). Jeżeli określono wartość 0, ustawienia zostaną zaktualizowane po uruchomieniu.",
+    "sceneInfo": "Za pomocą tej opcji można wybrać, jak obiekty sceny nazwy w drzewie obiektów.",
+    "sceneNamingRoom": "Format znacznika <pre>scen.<b>&lt;nazwa-z-grupy&GT;</b>.<b>&lt;nazwa-z-scena&GT;</b>.imię i</pre>",
+    "sceneNamingScene": "Format znacznika <pre>scen.<b>&lt;nazwa-z-scena&GT;</b>.<b>&lt;nazwa-z-grupy&GT;</b>.imię i</pre>",
+    "sync": "Ustawienia Synchronizacji ",
     "syncConfig": "Synchronizować Konfigur",
     "syncGroups": "Synchronizacja Grup",
     "syncInfo": "Wybierz elementy do synchronizacji",
