--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "Ajuste o brilho para 0, quando o dispositivo está desligado",
+    "briWhenOffInfo": "Esta opção define o <pre>brilho</pre> / <pre>nível</pre> 0, quando o dispositivo está desligado (<pre>no</pre> auf <pre>false</pre>).",
     "buttonDismiss": "Fechar",
     "buttonNotAgain": "Não mostrar novamente",
     "button_closeModal": "Cancelar",
@@ -7,6 +9,8 @@
     "connectionTitle": "Configurações de conexão de Tonalidade Ponte",
     "donateInformation": "Sinta-se livre para sugerir novos recursos via Github ou ioBroker fórum. Se você gosta deste adaptador, você é muito bem-vindo para doar.",
     "donateTitle": "Apoiar o desenvolvimento da tonalidade expandida do Adaptador!",
+    "garbageCollector": "Excluir desatualizado dispositivos de objetos",
+    "garbageCollectorInfo": "O Coletor de Lixo exclui desatualizado dispositivos da árvore de objectos que não tenham sido atualizadas 24 horas.",
     "getUserInfo": "Pressione o botão no seu Tonalidade Ponte de primeira! Depois, pressione o botão Obter novo usuário.",
     "hueToXY": "Usar o gráfico de DISPERSÃO, em vez de matiz (somente para não-Philips dispositivos)",
     "hueToXYInfo": "Quando a configuração de tonalidade do estado, não-Philips dispositivos podem falhar para este processo, mesmo que o comando foi aplicada com êxito. Com esta opção, o adaptador irá enviar sempre a tonalidade estado como xy comando para não-Philips dispositivos.",
@@ -21,12 +25,17 @@
     "nameIdInfo": "O ID do dispositivo é necessário dentro da árvore de objectos para identificar exclusivamente um dispositivo (no caso de nomes são redundand). Esta opção define se pretende colocar o ID, antes ou depois do nome do dispositivo.",
     "nameIdPrepend": "Adicione o prefixo de IDENTIFICAÇÃO do Dispositivo, o Nome do",
     "nameInfo": "Usar o Nome de Dispositivo na árvore do Objeto (em vez do ID)",
+    "onlyForDuplicates": "Use o ID do dispositivo apenas para unambiguousness no caso de dispositivos com o mesmo nome",
     "other": "Outras Configurações",
     "port": "Ponte Do Porto",
     "queue": "A fila de processamento (em segundos)",
     "queueInfo": "O tempo para o processamento de comandos na fila. Os comandos são colocados em fila e processados em conjunto. Isto permite aplicar serval comandos de uma vez (e não de um em um) em todos os seus dispositivos.",
     "refresh": "Atualização (em segundos)",
     "refreshInfo": "Tempo para atualizar todas as configurações / informações (em segundos). Se definido como 0, as definições só serão atualizadas na inicialização.",
+    "sceneInfo": "Com esta opção você pode escolher a forma como os objetos para as cenas são nomeados dentro do objeto árvore.",
+    "sceneNamingRoom": "Formato <pre>cenas.<b>&lt;Nome-do-Grupo - &gt;</b>.<b>&lt;Nome-de-Cena&gt;</b>.nome</pre>",
+    "sceneNamingScene": "Formato <pre>cenas.<b>&lt;Nome-de-Cena&gt;</b>.<b>&lt;Nome-do-Grupo - &gt;</b>.nome</pre>",
+    "sync": "Definições De Sincronização",
     "syncConfig": "Sincronizar Config",
     "syncGroups": "Sincronizar Grupos",
     "syncInfo": "Selecione os itens a serem sincronizados",
