--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "Setze Helligkeit auf 0, wenn das Gerät ausgeschaltet wird",
+    "briWhenOffInfo": "Diese Option schaltet die Helligkeit (<pre>brightness</pre> bzw. <pre>level</pre>) auf 0, wenn das Gerät ausgeschaltet wird (<pre>on</pre> auf <pre>false</pre>).",
     "buttonDismiss": "schließen",
     "buttonNotAgain": "nicht wieder anzeigen",
     "button_closeModal": "Abbrechen",
@@ -7,6 +9,8 @@
     "connectionTitle": "Verbindungseinstellungen für die Hue Bridge",
     "donateInformation": "Neue Funktionen / Features können gerne über Github oder das ioBroker Forum angefragt werden. Wenn dieser Adapter gefällt / nützlich ist, sind Spenden herzlich Willkommen.",
     "donateTitle": "Unterstützung der Entwicklung des hue-extended Adapters!",
+    "garbageCollector": "Nicht aktualisierte Geräte vom Objekt-Baum löschen",
+    "garbageCollectorInfo": "Der Garbage Collector löscht alte Geräte, die innerhalb von 24 Stunden nicht aktualisiert wurden, vom Objekt-Baum.",
     "getUserInfo": "Zunächst den Button an der Hue Bridge drücken! Danach mit dem Button -Neuen Benutzer abrufen- fortfahren.",
     "hueToXY": "Verwenden von <pre>XY</pre> anstelle von <pre>hue</pre> (nur für nicht-Philips-Geräte)",
     "hueToXYInfo": "Die Einstellung des <pre>hue</pre> Wertes kann trotz erfolgreich abgeschickten Befehl bei nicht-Philips-Geräte fehlschlagen. Mit dieser Option sendet der Adapter das Kommando immer als <pre>XY</pre> statt als <pre>hue</pre> Befehl (nur für nicht-Philips-Geräte).",
@@ -21,12 +25,17 @@
     "nameIdInfo": "Die Geräte-ID ist notwendig, um innerhalb des Objekt-Baums ein Gerät eindeutig identifizieren zu können (im Falle redundanter Namen). Diese Option legt fest, ob die Geräte-ID vor oder nach dem Namen des Gerätes erscheint.",
     "nameIdPrepend": "Geräte-ID voranstellen",
     "nameInfo": "Geräte-Namen im Objekt-Baum (anstelle der ID) verwenden",
+    "onlyForDuplicates": "Geräte-ID nur bei namensgleichen Einträgen für die Eindeutigkeit verwenden",
     "other": "Weitere Einstellungen",
     "port": "Bridge Port",
     "queue": "Queue-Verarbeitung (in Sekunden)",
     "queueInfo": "Zeit für die Verarbeitung der Befehle in der Warteschlange (in Sekunden). Befehle werden in die Warteschlange gestellt und gemeinsam verarbeitet. Dies ermöglicht das Anwenden mehrerer Befehle gleichzeitig (und nicht nacheinander) auf Ihren Geräten.",
     "refresh": "Aktualisierung (in Sekunden)",
     "refreshInfo": "Intervall zur Aktualisierung aller Einstellungen / Daten (in Sekunden). Wenn auf 0 gesetzt werden die Einstellungen nur beim Adapter-Start aktualisiert.",
+    "sceneInfo": "Nachfolgend kann eingestellt werden, wie die Datenpunkte für Szenen im Objekt-Baum angelegt werden.",
+    "sceneNamingRoom": "Format <pre>scenes.<b>&lt;Name-der-Gruppe&gt;</b>.<b>&lt;Name-der-Szene&gt;</b>.name</pre>",
+    "sceneNamingScene": "Format <pre>scenes.<b>&lt;Name-der-Szene&gt;</b>.<b>&lt;Name-der-Gruppe&gt;</b>.name</pre>",
+    "sync": "Synchronisierungseinstellungen",
     "syncConfig": "Synchronisation der Konfiguration",
     "syncGroups": "Synchronisation der Gruppen",
     "syncInfo": "Wähle die Elemente aus, die synchronisiert werden sollen",
