--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "Установить яркость до 0, когда устройство выключено",
+    "briWhenOffInfo": "Эта опция устанавливает тега <pre>яркость и</pre> / <до>уровня</Pre> это к 0, когда устройство выключено (теги<Pre>на</pre> в Ауф <Pre>это ложь и</pre>).",
     "buttonDismiss": "Уволить",
     "buttonNotAgain": "Больше не показывать ",
     "button_closeModal": "Отменить",
@@ -7,6 +9,8 @@
     "connectionTitle": "Настройки подключения для Hue мост",
     "donateInformation": "Не стесняйтесь предложить новые функции через GitHub или форуме ioBroker. Если вам нравится этот адаптер, вы можете пожертвовать.",
     "donateTitle": "Поддержка развития Хюэ-расширенный адаптер!",
+    "garbageCollector": "Удаление устаревших устройств от объектов",
+    "garbageCollectorInfo": "Сборщик мусора удаляет устаревшие приборы из дерева объектов, которые не были обновлены в течение 24 часов.",
     "getUserInfo": "Нажмите кнопку на вашем Hue мост первым! После этого, нажав на кнопку-получишь новый пользователь.",
     "hueToXY": "Используем XY вместо Хюэ (только для не-устройств от Philips)",
     "hueToXYInfo": "При установлении государственного оттенок, не Филипс устройства могут не процесс этот хоть и команда успешно применяется. С этой опцией, адаптер всегда вышлем государственной оттенок как команда XY, чтобы не Филипс устройства.",
@@ -21,12 +25,17 @@
     "nameIdInfo": "Идентификатор устройства необходимо в дереве объектов для уникальной идентификации устройства (в случае, если имена redundand). Этот параметр определяет, следует ли поставить код перед или после имени устройства.",
     "nameIdPrepend": "Добавить ID к имени устройства ",
     "nameInfo": "Использовать имя устройства в дереве объектов (а не ID)",
+    "onlyForDuplicates": "Используем идентификатор устройства только для однозначности в случае устройства с тем же именем",
     "other": "Другие Параметры",
     "port": "Мост Порт",
     "queue": "Обработка очереди (в секундах)",
     "queueInfo": "Время на обработку команд в очереди. Команды помещаются в очередь и обрабатываются вместе. Это позволяет применять команды сервал сразу (и не по одному) на ваших устройствах.",
     "refresh": "Обновления (в секундах)",
     "refreshInfo": "Время обновления все настройки / информации (в секундах). Если задано значение 0, параметры будут обновляться при запуске.",
+    "sceneInfo": "С помощью этой опции вы можете выбрать, как объекты для сцены имени в дереве объектов.",
+    "sceneNamingRoom": "Формат тега <pre>сцен.<б>&lt;имя-из-группы&ГТ;</б>.<б>&lt;имя-из-сцена&ГТ;</б>.имя и</pre>",
+    "sceneNamingScene": "Формат тега <pre>сцен.<б>&lt;имя-из-сцена&ГТ;</б>.<б>&lt;имя-из-группы&ГТ;</б>.имя и</pre>",
+    "sync": "Настройки Синхронизации ",
     "syncConfig": "Синхронизировать Конфиг",
     "syncGroups": "Синхронизация Групп",
     "syncInfo": "Выберите элементы для синхронизации",
