--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,4 +1,6 @@
 {
+    "briWhenOff": "亮度设置为0，当装置被关闭",
+    "briWhenOffInfo": "这种选项将<预>亮度</预>/<预>级别</预>0，当该装置被关闭(<预>就</预>auf<预>假</预>).",
     "buttonDismiss": "驳回",
     "buttonNotAgain": "不要再显示",
     "button_closeModal": "取消",
@@ -7,6 +9,8 @@
     "connectionTitle": "连接设置顺桥",
     "donateInformation": "随时提出新的功能，通过审查或ioBroker论坛。 如果你喜欢这个转接器，你非常受欢迎的捐赠。",
     "donateTitle": "支持发展的顺化扩展适配器!",
+    "garbageCollector": "删除过时的设备的对象",
+    "garbageCollectorInfo": "垃圾收集中删除过时的设备的对象树尚未更新在24小时内。",
     "getUserInfo": "按下按钮你顺桥第一！ 后来，按下按钮-获得新的用户.",
     "hueToXY": "使用x-y而不是色调(仅适用于非飞利浦的设备)",
     "hueToXYInfo": "设定时的顺国家、非飞利浦设备可能无法处理此，即使该命令已成功应用。 与此选项，适配器将总是发送的色调国家作为xy命令以非飞利浦设备。",
@@ -21,12 +25,17 @@
     "nameIdInfo": "设备ID是必要的内对象树唯一识别设备(在情况下，名称是redundand). 这项定义是否把ID之前或之后的设备名称。",
     "nameIdPrepend": "Prepend ID设备名称",
     "nameInfo": "使用的设备名称中的目标树(而不是ID)",
+    "onlyForDuplicates": "使用的设备ID只unambiguousness在的情况下设备的具有相同的名称",
     "other": "其他的设置",
     "port": "桥口",
     "queue": "的队列中处理(秒)",
     "queueInfo": "处理时间命令在队列中。 命令是排队，并处理在一起。 这将允许申请薮命令，一旦(而不是逐一)在您的设备。",
     "refresh": "刷新(秒)",
     "refreshInfo": "时间用于清爽的所有设置/信息(秒)。 如果设定为0、设置将只能刷新启动。",
+    "sceneInfo": "这个选择你可以选择对象的场景名内对象的树。",
+    "sceneNamingRoom": "格式<预>色扩展。0.场景。<b>和名称的组gt;</b>.<b>和名称的场景-gt;</b>.名</预>",
+    "sceneNamingScene": "格式<预>色扩展。0.场景。<b>和名称的场景-gt;</b>.<b>和名称的组gt;</b>.名</预>",
+    "sync": "同步设置",
     "syncConfig": "同步配置",
     "syncGroups": "同步组",
     "syncInfo": "选择项目，要同步",
