--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -38,6 +38,7 @@
     "sync": "Ajustes De Sincronización",
     "syncConfig": "Sincronizar Config",
     "syncGroups": "Sincronizar Grupos",
+    "syncHueLabsScenes": "Sincronizar El Matiz De Los Laboratorios De Escenas",
     "syncInfo": "Seleccione los elementos para ser sincronizado",
     "syncLights": "Sincronizar Las Luces",
     "syncRecycled": "Sincronizar borrados / artículos reciclados",
