--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -38,6 +38,7 @@
     "sync": "Impostazioni Di Sincronizzazione",
     "syncConfig": "Sincronizzare Config",
     "syncGroups": "Sincronizzare I Gruppi",
+    "syncHueLabsScenes": "Sincronizzare Tonalità Laboratori Scene",
     "syncInfo": "Selezionare gli elementi per essere sincronizzati",
     "syncLights": "Sincronizzare Le Luci",
     "syncRecycled": "Sincronizzare cancellati / oggetti riciclati",
