--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -38,6 +38,7 @@
     "sync": "Ustawienia Synchronizacji ",
     "syncConfig": "Synchronizować Konfigur",
     "syncGroups": "Synchronizacja Grup",
+    "syncHueLabsScenes": "Synchronizować Sceny Hue Laboratorium ",
     "syncInfo": "Wybierz elementy do synchronizacji",
     "syncLights": "Zsynchronizować Światła",
     "syncRecycled": "Synchronizacja pulpitu / recyklingu elementów",
