--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -38,6 +38,7 @@
     "sync": "Definições De Sincronização",
     "syncConfig": "Sincronizar Config",
     "syncGroups": "Sincronizar Grupos",
+    "syncHueLabsScenes": "Sincronizar Matiz Laboratórios De Cenas",
     "syncInfo": "Selecione os itens a serem sincronizados",
     "syncLights": "Sincronizar Luzes",
     "syncRecycled": "Sincronizar excluídos / reciclado itens",
