--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -38,6 +38,7 @@
     "sync": "Настройки Синхронизации ",
     "syncConfig": "Синхронизировать Конфиг",
     "syncGroups": "Синхронизация Групп",
+    "syncHueLabsScenes": "Синхронизировать Сцены Хюэ Лаборатории ",
     "syncInfo": "Выберите элементы для синхронизации",
     "syncLights": "Синхронизировать Света",
     "syncRecycled": "Синхронизация удаленных / переработанных элементов",
