--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -38,6 +38,7 @@
     "sync": "Synchronisation Settings",
     "syncConfig": "Synchronize Config",
     "syncGroups": "Synchronize Groups",
+    "syncHueLabsScenes": "Synchronize Hue Labs Scenes",
     "syncInfo": "Select items to be synchronized",
     "syncLights": "Synchronize Lights",
     "syncRecycled": "Synchronize deleted / recycled items",
