--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -45,6 +45,7 @@
     "syncResources": "Синхронизация Ресурсов",
     "syncRules": "Правила Синхронизации ",
     "syncScenes": "Синхронизировать Сцены",
+    "syncScenesDuplicates": "Синхронизируйте дублированные сцены, а также",
     "syncSchedules": "Синхронизировать Расписания",
     "syncSensors": "Синхронизировать Датчики",
     "tab_alexa": "Алекса интеграции",
