--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -45,6 +45,7 @@
     "syncResources": "同步的资源",
     "syncRules": "同的规则",
     "syncScenes": "同步的场景",
+    "syncScenesDuplicates": "同步重复的场景",
     "syncSchedules": "同步时间表",
     "syncSensors": "同步传感器",
     "tab_alexa": "Alexa的一体化",
